--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
+    "@headlessui-float/react": "^0.10.1",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@mantine/core": "^5.9.5",
@@ -18,6 +19,7 @@
     "@mantine/hooks": "^5.9.5",
     "@mantine/next": "^5.9.5",
     "@mantine/prism": "^5.9.5",
+    "@popperjs/core": "^2.11.6",
     "@tabler/icons": "^1.118.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -26,6 +28,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-popper": "^2.3.0",
+    "react-portal": "^4.2.2",
     "sass": "^1.57.0"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "postcss": "^8.4.20",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   }
 }
